# Algo1

./: .gitignore  README.md
Labo/: README.md
Labo/labo_04/: cases.cpp  ejercicios.cpp  ejercicios.h  prln.pl
Labo/labo_05/: CMakeLists.txt  cases.cpp  cases.h  ejercicios.cpp  ejercicios.h  main.cpp  prln.pl
Labo/labo_06/: .cases.cpp.swp  ejercicios.cpp  main.cpp
Labo/labo_07/ej1/: puntaje.cpp
Labo/labo_07/ej2/: llenarTaxis.cpp
Labo/labo_07/ej3/: baldosasDelPiso.cpp  contandoDragones.cpp  electores.cpp
Labo/labo_08/: .gitignore  README.md  main.cpp
Labo/labo_08/src/: ejercicios.cpp  ejercicios.h  risas.cpp  risas.h
Labo/labo_08/tests/: risasTEST.cpp  tests.cpp
Labo/labo_09/: .ejercicios.cpp.swp  .main.cpp.swp  Labo10  ejercicios.cpp  ejercicios.h  main.cpp
Labo/labo_09/tests/: buscarTEST.cpp  encontrarRotadoTEST.cpp  indicePicoTEST.cpp  masCercanoKTEST.cpp  menorMasGrandeTEST.cpp  puntoFijoTEST.cpp
Practicas/Practica1/: practica1f.tex
Practicas/Practica1/Entregable/: resuelto_entregable.tex
Practicas/Practica2/: practica2g.tex
Practicas/Practica2/Entregable/: resuelto_entrefable.tex  resuelto_entregable.tex
Practicas/Practica3/: practiga3.tex
Practicas/Practica3/Entregable/: resolucion_entregable.tex
Practicas/Practica4/: practica4.tex
Practicas/Practica4/Entregable/: res_entregable.tex
Practicas/Practica5/: practiga5.tex
Practicas/Practica6/: practiga6.tex
Practicas/Practica7/: practiga7.tex
Practicas/Practica8/: Practica8  practiga8.tex
Practicas/Practica9/: Practica9  practiga9.tex
Practicas/macros/: Algo1Macros.tex
(+36 files in other folders)
